[package]
name = "dolittle-rs"
version = "0.1.0"
authors = ["higumachan <harekumo792154@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "interpreter",
    "interpreter/core",
    "interpreter/parser",
    "utilities",
    "unicode_num",
    "gui",
]

[dependencies]
conrod_core = "0.70.0"
conrod_glium = "0.70.0"
conrod_winit = "0.70.0"
glium = "0.24.0"
find_folder = "*"
winit = "0.19"
interpreter = { path = "interpreter" }

[dev-dependencies]
