[package]
name = "dolittle-rs"
version = "0.1.0"
authors = ["higumachan <harekumo792154@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "interpreter",
    "interpreter/core",
    "interpreter/parser",
    "utilities",
    "unicode_num",
    "gui",
    "web_gui",
]

[dependencies]
iced = "0.10.0"
interpreter = { path = "interpreter" }
lazy_static = "1.4.0"

[dev-dependencies]
