[package]
name = "parser"
version = "0.1.0"
authors = ["Yuta Hinokuma <yuta.hinokuma725@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core"}
nom = "5.1.2"
nom-unicode = "0.1.0"

[dev-dependencies]
rstest = "0.6.3"
