[package]
name = "web_gui"
version = "0.1.0"
authors = ["Yuta Hinokuma <yuta.hinokuma725@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
interpreter = { path = "../interpreter"}
core = { path = "../interpreter/core"}
js-sys = "0.3.41"
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"
wasm-bindgen-futures = "0.4.14"
lazy_static = "1.4.0"

[dependencies.wasm-bindgen]
version = "0.2.64"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]
